# Mostima

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
.github/workflows/: cmake.yml
inc/: Core.hpp
inc/Parser/: EvaFunc.hpp  File.hpp  Func.hpp  FuncParser.hpp  JSONParser.hpp
inc/Process/: Entry.hpp  Executor.hpp
inc/Utils/: File.hpp
rsrc/: c.json  types.json
src/: Core.cpp  main.cpp
src/Parser/: EvaFunc.cpp  File.cpp  Func.cpp  FuncParser.cpp  JSONParser.cpp
src/Process/: Entry.cpp  Executor.cpp
tests/: AVTests.cpp
tests/AVTests/: AVTests.cpp  CMakeLists.txt  clean.sh  test.sh
tests/CExample/: error_1.c  sample.c  simple.c
tests/ParserTests/: CMakeLists.txt  ParserTests.cpp
